<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:src="@drawable/popupwindow_line" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_popupwindow_left"
            style="@style/popupwindow_button_exlarge_left_style"
            android:text="@string/button_cancel" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@drawable/popupwindow_button_line_v" />

        <Button
            android:id="@+id/btn_popupwindow_right"
            style="@style/popupwindow_button_exlarge_right_style"
            android:text="@string/button_save" />
    </LinearLayout>

</LinearLayout>