<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/ll_popupwindow_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical" >

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:background="@drawable/y335_line" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_popupwindow_left"
            style="@style/popupwindow_button_left_style"
            android:text="@string/button_cancel" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            android:background="@drawable/y335_line" />

        <Button
            android:id="@+id/btn_popupwindow_right"
            style="@style/popupwindow_button_right_style"
            android:text="@string/button_confirm" />
    </LinearLayout>

</LinearLayout>