<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fl_gas_quality_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="@dimen/history_electricity_width"
        android:layout_height="@dimen/history_electricity_height"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:background="@drawable/y335_bg_history_electricity"
        android:orientation="vertical"
        android:paddingTop="@dimen/history_electricity_padding_v" >

        <LinearLayout
            android:id="@+id/tw_history_electricity"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/history_electricity_tab_height"
            android:layout_marginLeft="@dimen/history_electricity_padding_h"
            android:background="@drawable/y335_history_electricity_day"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/ib_history_electricity_day"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/day_history_electricity"
                android:textColor="@color/history_electricity_item_select_color"
                android:textSize="@dimen/history_electricity_item_text_size" />

            <Button
                android:id="@+id/ib_history_electricity_month"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/month_history_electricity"
                android:textColor="@color/system_color_white"
                android:textSize="@dimen/history_electricity_item_text_size" />

            <Button
                android:id="@+id/ib_history_electricity_year"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/year_history_electricity"
                android:textColor="@color/system_color_white"
                android:textSize="@dimen/history_electricity_item_text_size" />
        </LinearLayout>

        <rici.roplug.open.view.CustomerViewPager
            android:id="@+id/vp_history_electricity"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_history_electricity_wait"
        android:layout_width="@dimen/history_electricity_wait_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        android:visibility="gone" >

        <ProgressBar
            android:id="@+id/pb_history_electricity"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/tv_history_electricity_wait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/socket_main_current_electricity_margin_top"
            android:background="@null"
            android:text="@string/get_data_from_server"
            android:textColor="@color/system_color_white" />
    </LinearLayout>

    <ImageButton
        android:id="@+id/ib_popupwindow_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|right"
        android:layout_marginRight="8dp"
        android:background="@drawable/button_popupwindow_close"
        android:contentDescription="@string/app_name" >
    </ImageButton>

</FrameLayout>